--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -40,6 +40,13 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: 38% 50%;
+                visibility: hidden;
+                transition: 1.4s;
+                opacity: 0;
+                &.reveal-image {
+                    visibility: visible;
+                    opacity: 1;
+                }
             }
         }
     }
